migliorie grafiche e tolto lightbox

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,7 +30,7 @@
         {{ partial "menu.html" . }}
 
         
-        <main class="pt-8 sm:pt-0 pb-10 max-w-3xl">
+        <main class="pb-10 max-w-3xl">
             {{ with .Parent }}
                 →
                 <a href="{{ .Permalink }}">{{ .Title }}</a>
