--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,5 +1,5 @@
 <header
-  class="w-full max-w-4xl mx-auto mb-12 md:mb-20 px-4 md:px-0 md:mt-20 mt-4"
+  class="w-full max-w-4xl mx-auto mb-6 md:mb-20 md:mt-20 mt-4"
 >
   <div class="flex flex-row items-center gap-4 md:relative">
     <div
