--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-<footer class="bg-primary-dark text-primary-light container mx-auto px-4 max-w-3xl flex relative">
+<footer class="bg-accent text-primary-light container mx-auto px-4 max-w-3xl flex relative">
     <div class="container px-4 py-4">
-        <p class="text-center">{{ .Site.Title }} | fatto con Hugo | <a href="https://github.com/Metro-Olografix/olografix.org" target="_blank">sorgente</a></p>
+        <p class="text-center">{{ .Site.Title }} | Fatto con Hugo | <a href="https://github.com/Metro-Olografix/olografix.org" target="_blank">Sorgente</a></p>
     </div>
 </footer>
