--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
       class="md:w-32 md:h-32 h-24 w-24 flex-shrink-0 md:absolute md:left-0 md:top-1/2 md:-translate-y-1/2" id="mainMenuButton"
     >
       <button
-        class="w-full h-full bg-accent border-4 border-primary-dark flex flex-col items-center justify-center hover:cursor-pointer transition-transform hover:translate-x-1 hover:translate-y-1 hover:shadow-[4px_4px_0px_0px_rgba(22,33,62,1)]"
+        class="w-full h-full bg-accent border-0 border-primary-dark flex flex-col items-center justify-center hover:cursor-pointer transition-transform hover:translate-x-1 hover:translate-y-1 hover:shadow-[4px_4px_0px_0px_rgba(22,33,62,1)]"
       >
         <img
           src="/images/metro-light.png"
@@ -18,9 +18,9 @@
     </div>
 
     <h1
-      class="text-4xl md:text-5xl font-bold text-dark-green md:text-center md:pl-48 md:pr-16"
+      class="text-4xl md:text-5xl font-bold md:text-center md:pl-48 md:pr-16"
     >
-      Metro Olografix
+      Metro Olografix<span class="inline-block blink">_</span>
     </h1>
   </div>
 </header>
