--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,3 +21,12 @@ body {
 .logo-menu:hover {
     transform: scale(1.05); /* Slightly enlarges on hover */
 }
+
+@keyframes blink {
+    0%, 100% { opacity: 1; }
+    50% { opacity: 0; }
+  }
+
+.blink {
+animation: blink 2s step-end infinite;
+}
