--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,15 @@
 {{ define "main" }}
+
 <article>
     <h1 class="text-4xl font-bold mb-8 text-primary-dark">{{ .Title }}</h1>
     <h2 class="text-xl mb-8 text-primary-dark">{{ .Params.subtitle }}</h2>
+
+    {{ if .Params.hasTOC | default false}}
+    <div class="bg-white my-4 p-6 border-4 border-primary-dark shadow-[8px_8px_0px_0px_rgba(22,33,62,1)]">
+        {{ .TableOfContents }}
+    </div>
+    {{ end }}
+
     <div class="bg-white p-6 border-4 border-primary-dark shadow-[8px_8px_0px_0px_rgba(22,33,62,1)]">
         {{ .Content }}
     </div>
