--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
 
 <!-- Membership Banner -->
 <div class="bg-accent text-primary-light p-4 rounded-lg mb-8 transition-colors duration-300">
-    <a href="https://associati.olografix.org" class="block text-center text-xl font-bold">
+    <a href="https://associati.olografix.org" class="block text-center text-xl font-bold rainbow-text">
         Entra in Metro Olografix | Tesseramento 2025
     </a>
 </div>
