--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,50 +1,88 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap");
 
 html {
-    scrollbar-gutter: stable;
-    overflow-y: scroll; /* Fallback for older browsers */
+  scrollbar-gutter: stable;
+  overflow-y: scroll; /* Fallback for older browsers */
 }
 
 body {
-    font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
 }
 
 .logo-menu {
-    transition: transform 0.3s ease-in-out;
-    cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .logo-menu span {
-    transition: color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
 }
 
 .logo-menu:hover {
-    transform: scale(1.05); /* Slightly enlarges on hover */
+  transform: scale(1.05); /* Slightly enlarges on hover */
 }
 
 @keyframes blink {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0; }
+  0%,
+  100% {
+    opacity: 1;
   }
+  50% {
+    opacity: 0;
+  }
+}
 
 .blink {
-animation: blink 2s step-end infinite;
+  animation: blink 2s step-end infinite;
 }
 
 .hugo-text {
-    display: inline-block;
-    position: relative;
+  display: inline-block;
+  position: relative;
 }
 .letter {
-    display: inline-block;
-    transition: transform 0.3s, opacity 0.3s;
+  display: inline-block;
+  transition: transform 0.3s, opacity 0.3s;
 }
 .letter.rotate {
-    animation: flipLetter 0.6s ease-out;
+  animation: flipLetter 0.6s ease-out;
 }
 @keyframes flipLetter {
-    0% { transform: rotateX(0deg); opacity: 1; }
-    50% { transform: rotateX(90deg); opacity: 0; }
-    51% { transform: rotateX(270deg); opacity: 0; }
-    100% { transform: rotateX(360deg); opacity: 1; }
+  0% {
+    transform: rotateX(0deg);
+    opacity: 1;
+  }
+  50% {
+    transform: rotateX(90deg);
+    opacity: 0;
+  }
+  51% {
+    transform: rotateX(270deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(360deg);
+    opacity: 1;
+  }
+}
+
+@keyframes rainbow-text {
+  33% {
+    color: #e94560;
+  }
+  66% {
+    color: #fca311;
+  }
+  100% {
+    color: #ffffff;
+  }
+}
+
+.rainbow-text {
+  animation: rainbow-text 3s infinite;
+  animation-play-state: paused;
+}
+
+.rainbow-text:hover {
+  animation-play-state: running;
 }
