--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -1,21 +1,5 @@
-<nav
-  id="mobileMenu"
-  class="fixed inset-0 bg-primary-dark text-primary-light z-40 hidden"
-  aria-label="Mobile navigation"
-  role="navigation"
->
+<nav id="mobileMenu" class="fixed inset-0 bg-primary-dark text-primary-light z-40 hidden" aria-label="Mobile navigation" role="navigation">
   <div class="h-full flex flex-col items-center justify-center">
-    <div class="absolute top-4 right-4">
-      <button
-        id="closeMenu"
-        class="text-primary-light text-4xl p-2 hover:opacity-80 focus:outline-none focus:ring-2 focus:ring-primary-light"
-        aria-label="Close menu"
-        type="button"
-      >
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-
     <div class="space-y-6">
       {{ range .Site.Menus.main }}
       <a
