Head link to home

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -16,11 +16,12 @@
         <span class="text-2xl font-bold text-primary-light">Menu</span>
       </button>
     </div>
-
-    <h1
-      class="text-4xl md:text-5xl font-bold md:text-center md:pl-48 md:pr-16"
-    >
-      Metro Olografix<span class="inline-block blink">_</span>
-    </h1>
+    <a href="{{ .Site.BaseURL | relLangURL }}">
+      <h1
+        class="text-4xl md:text-5xl font-bold md:text-center md:pl-48 md:pr-16"
+      >
+        Metro Olografix<span class="inline-block blink">_</span>
+      </h1>
+    </a>
   </div>
 </header>
