--- a/layouts/photogallery/list.html
+++ b/layouts/photogallery/list.html
@@ -1,15 +1,12 @@
 {{ define "main" }}
 
 <h1 class="text-4xl font-bold mb-8 text-primary-dark">{{ .Title }}</h1>
-{{ range .Pages }}
+{{ range sort .Pages "Params.weight" "desc" "Title" "asc" }}
     <article class="mb-8">
         <h2 class="text-2xl font-bold mb-2">
             <a href="{{ .RelPermalink }}" class="text-accent hover:underline">>> {{ .Title }}</a>
         </h2>
     </article>
 {{ end }}
-
-
-
 
 {{ end }}
