--- a/layouts/photogallery/list.html
+++ b/layouts/photogallery/list.html
@@ -67,7 +67,7 @@
 
 <!-- Messaggio se non ci sono pagine -->
 {{ if not $pages }}
-    <p>Non ci sono ancora eventi in questa sezione.</p>
+    <p>Non ci sono ancora album in questa sezione.</p>
 {{ end }}
 
 <script>
