--- a/layouts/photogallery/list.html
+++ b/layouts/photogallery/list.html
@@ -17,12 +17,7 @@
                 <h2 class="text-2xl font-bold text-accent">
                     >> {{ .Key }}
                     <span class="text-sm text-gray-600">
-                        ({{ len .Pages }} 
-                        {{ if eq (len .Pages) 1 }}
-                            evento
-                        {{ else }}
-                            eventi
-                        {{ end }})
+                        ({{ len .Pages }} album
                     </span>
                 </h2>
             </button>
