--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,8 +6,8 @@
         <!-- Hamburger menu -->
         <div class="relative h-[28px] md:h-[38px] items-center flex px-2">
           <!-- Regular menu button -->
-          <button class="h-full items-center flex" aria-label="Menu" id="mainMenuButton">
-            <img src="/images/menu.png" alt="Menu" class="h-full w-auto object-contain">
+          <button class="h-full items-center flex flex-shrink-0" aria-label="Menu" id="mainMenuButton">
+            <img src="/images/menu.png" alt="Menu" class="h-full w-full">
           </button>
           
           <!-- Close button positioned in the same spot -->
@@ -19,17 +19,16 @@
           </button>
         </div>
         <!-- Metro Olografix Logo -->
-        <div class="h-[28px] md:h-[38px] items-center flex px-2">
+        <div class="h-[28px] md:h-[38px] items-center flex px-2 flex-shrink-0">
           <img 
             src="/images/metro-dark.png" 
             alt="Metro Olografix Logo" 
-            class="h-full w-auto object-contain"
+            class="h-full w-full"
           >
         </div>
       </div>
       
-      <!-- Centered h1 text -->
-      <h1 class="text-2xl md:text-5xl font-bold m-0 justify-center">
+      <h1 class="text-2xl md:text-5xl font-bold m-0 justify-right">
         Metro Olografix<span class="inline-block blink">_</span>
       </h1>
     </div>
