--- a/layouts/photogallery/list.html
+++ b/layouts/photogallery/list.html
@@ -45,11 +45,11 @@
 {{ if $pagesWithoutWeight }}
     <div class="space-y-4 mt-8">
         {{ range sort $pagesWithoutWeight "Title" "asc" }}
-        <article class="border-l-4 border-accent pl-4">
+        <article class="ml-4">
             <h3 class="text-xl">
                 <a href="{{ .RelPermalink }}" 
                    class="text-primary-dark hover:text-accent hover:underline transition-colors">
-                    {{ .Title }}
+                    >> {{ .Title }}
                 </a>
             </h3>
             {{ with .Description }}
