--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -30,7 +30,7 @@
         {{ partial "menu.html" . }}
 
         
-        <main class="pb-10 max-w-3xl">
+        <main class="max-w-3xl">
             {{ with .Parent }}
                 →
                 <a href="{{ .Permalink }}">{{ .Title }}</a>
