--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -3,7 +3,11 @@
 {{ range .Pages }}
 <article class="mb-8">
     <h2 class="text-2xl font-bold mb-2">
-        <a href="{{ .Permalink }}" class="text-accent hover:underline">>> {{ .Title }}</a>
+        {{ $url := .Permalink }}
+        {{ if .Params.externalUrl }}
+            {{ $url = .Params.externalUrl }}
+        {{ end }}
+        <a href="{{ $url }}" class="text-accent hover:underline">>> {{ .Title }}{{ if .Params.externalUrl }}↗{{ end }}</a>
     </h2>
     <p class="mt-2">{{ .Params.subtitle | default .Summary }}</p>
 </article>
