--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -28,10 +28,13 @@
         </div>
       </div>
       
-      <h1 class="text-2xl md:text-5xl font-bold m-0 justify-right">
-        Metro Olografix<span class="inline-block blink">_</span>
-      </h1>
+      <a href="{{ .Site.BaseURL | relLangURL }}">
+        <h1 class="text-2xl md:text-5xl font-bold m-0 justify-right">
+          Metro Olografix<span class="inline-block blink">_</span>
+        </h1>
+      </a>
     </div>
+
   </div>
 </header>
 
