ho rotto l'header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -7,7 +7,7 @@
         <div class="relative h-[28px] md:h-[38px] items-center flex px-2">
           <!-- Regular menu button -->
           <button class="h-full items-center flex flex-shrink-0" aria-label="Menu" id="mainMenuButton">
-            <img src="/images/menu.png" alt="Menu" class="h-full w-full">
+            <img src="/images/menu.png" alt="Menu" class="h-full w-auto md:w-full">
           </button>
           
           <!-- Close button positioned in the same spot -->
@@ -23,7 +23,7 @@
           <img 
             src="/images/metro-dark.png" 
             alt="Metro Olografix Logo" 
-            class="h-full w-full"
+            class="h-full w-auto md:w-full"
           >
         </div>
       </div>
