--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-accent text-primary-light container mx-auto px-4 max-w-3xl flex relative">
     <div class="container px-4 py-4">
-        <p class="text-center">fatto con <span class="hugo-text"><span class="letter">H</span>ugo</span> | <a href="{{ .Site.Params.archiveOldSite }}" target="_blank">vecchio sito</a> | <a href="https://github.com/Metro-Olografix/olografix.org" target="_blank">sorgente</a></p>
+        <p class="text-center">fatto con <span class="hugo-text"><span class="letter">H</span>ugo</span> | <a href="{{ .Site.Params.archiveOldSite }}" rel="noopener noreferrer" target="_blank">vecchio sito</a> | <a href="https://github.com/Metro-Olografix/olografix.org" rel="noopener noreferrer" target="_blank">sorgente</a></p>
     </div>
 </footer>
