--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -11,11 +11,11 @@
           </button>
           
           <!-- Close button positioned in the same spot -->
-          <button id="closeMenu" 
-                  class="inset-0 text-primary-light z-50 hidden" 
-                  aria-label="Close menu" 
-                  type="button">
-            <span aria-hidden="true" class="text-5xl">&times;</span>
+          <button id="closeMenu" class="inset-0 z-50 hidden" aria-label="Close menu" type="button">
+            <img src="/images/close.png" 
+              alt="Close"
+              class="h-7 w-7 md:h-9 md:w-9"
+            >
           </button>
         </div>
         <!-- Metro Olografix Logo -->
@@ -34,7 +34,6 @@
         </h1>
       </a>
     </div>
-
   </div>
 </header>
 
