--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -1,6 +1,6 @@
 {{ with .Parent }}
 
     {{ partial "breadcrumbs.html" . }}
-    {{ if .Parent }}→{{ end }}
+    {{ if .Parent }}►{{ end }}
     <a href="{{ .Permalink }}">{{ .Title }}</a>
 {{ end }}
